--- a/sales-order-management-api/src/main/resources/application.properties
+++ b/sales-order-management-api/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=Sales Order Management Api
+
+# ===============================
+# H2 Database Configuration
+# ===============================
+spring.datasource.url=jdbc:h2:mem:salesdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.platform=h2
+
+# ===============================
+# JPA & Hibernate
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+# ===============================
+# Flyway (must use same credentials)
+# ===============================
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:h2:mem:salesdb
+spring.flyway.user=sa
+spring.flyway.password=sa
+spring.flyway.locations=classpath:db/migration
+
