--- a/sales-order-management-api/src/main/resources/application.yml
+++ b/sales-order-management-api/src/main/resources/application.yml
@@ -1,20 +1,21 @@
 spring:
   datasource:
-    # default to H2 in-memory for initial dev; swap to postgres later
-    url: jdbc:h2:mem:salesdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:file:./data/salesdb;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
     username: sa
-    password:
+    password: sa
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
+    open-in-view: false
     properties:
       hibernate:
         format_sql: true
-
+        dialect: org.hibernate.dialect.H2Dialect
   flyway:
-    enabled: false   # enable when we add migrations
+    enabled: true
+    locations: classpath:db.migration
 
 server:
   port: 8080
@@ -23,5 +24,9 @@ logging:
   level:
     root: INFO
     org.hibernate.SQL: DEBUG
+    com.example.sales.security: DEBUG
+    io.jsonwebtoken: DEBUG
 
-# jwt.secret and other secrets will be added later via env vars
+jwt:
+  secret: ${JWT_SECRET:change-me-super-secret-please-change}
+  expirationMs: ${JWT_EXP_MS:3600000}
